--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -7,11 +7,8 @@
         "id": "216d1d505e30dbc2",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "3-Resources/Daily-Notes/2021-08-19.md",
-            "mode": "source"
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -91,9 +88,7 @@
             "type": "leaf",
             "state": {
               "type": "outline",
-              "state": {
-                "file": "3-Resources/Daily-Notes/2021-08-19.md"
-              }
+              "state": {}
             }
           },
           {
@@ -152,7 +147,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "3-Resources/Daily-Notes/2021-08-19.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -169,7 +163,6 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "3-Resources/Daily-Notes/2021-08-19.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -200,15 +193,15 @@
   },
   "active": "216d1d505e30dbc2",
   "lastOpenFiles": [
+    "3-Reference/Web-Clippings/2021-08-07-Obsidian Clipper.md",
+    "3-Reference/Web-Clippings/Obsidian Clipper.md",
+    "3-Reference/Web-Clippings/Obsidian Clipper 1.md",
+    "3-Reference/Web Clippings/Obsidian Clipper.md",
+    "3-Reference/Ansible for the Windows System Admin.md",
+    "3-Reference/Web-Clippings/2021-08-09-Keyboard shortcuts for Gmail - Computer - Gmail Help.md",
+    "3-Reference/Web-Clippings/2021-08-07-notlmncopy-as-markdown 🖱 Browser extension to copy hyperlinks, images, and selected text as Markdown with GFM support.md",
+    "Web Clippings.md",
     "3-Resources/Daily-Notes/2021-08-19.md",
-    "0-Inbox/Untitled.md",
-    "0-Inbox/Cloud Run - Serverless Applications.md",
-    "2-Slipbox/Zsh.md",
-    "2-Slipbox/Untitled.md",
-    "3-Resources/README.md",
-    "3-Resources/Daily-Notes/2021-08-14.md",
-    "2-Slipbox/Organizing Disk Partitions on Windows.md",
-    "3-Resources/Highlights/Why We Sleep.md",
-    "3-Resources/Highlights/The Linux Command Line.md"
+    "0-Inbox/Untitled.md"
   ]
 }
